# P5JS-Studio

./: README.md  index.html  package-lock.json  package.json  vite.config.ts
.github/workflows/: build.yml
src/: App.tsx  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src/components/: Editor.tsx  FileTabs.tsx  Gallery.tsx  Preview.tsx  SketchCard.tsx  UploadButton.tsx
src/lib/: p5source.ts  tauri.ts
src/store/: useSketchStore.ts
